fix(navbar): increase z-index to ensure visibility

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,7 +32,7 @@ body {
 // =================================
 .navbar {
    position: fixed;
-   z-index: 2;
+   z-index: 3;
    background-color: transparent;
    padding: 0.5rem 0 0;
    box-shadow: none;
